<resources>
    <string name="app_name">The Best Photo Gallery</string>

    <!--data-->
    <string name="details_name">Name</string>
    <string name="details_name_old">Old Name</string>
    <string name="details_name_new">New Name</string>
    <string name="details_description">Description</string>
    <string name="details_description_old">Old Description</string>
    <string name="details_description_new">New Description</string>
    <string name="details_dimensions">Dimensions</string>
    <string name="details_filesize">File Size</string>
    <string name="details_geo">Geographical Position</string>
    <string name="details_altitude">Altitude</string>
    <string name="details_date">Date</string>
    <string name="details_default">None</string>
    <string name="details_join">and</string>

    <!--menu-->
    <string name="view_map_menuentry_title">View On Map</string>
    <string name="view_image_details_menuentry_title">View Details</string>
    <string name="edit_image_details_menuentry_title">Image Options</string>
    <string name="upload_image_details">Upload to Server</string>

    <!--Options-->
    <string name="edit_details">Edit Image Details</string>
    <string name="edit_geo">Edit Geolocation Details</string>
    <string name="edit_backup">Image Backup</string>
    <string name="details_map">Change Geolocation</string>
    <string name="details_backup">Send Image to Server</string>
    <string name="title_activity_filter_select">FilterSelectActivity</string>

    <!--Map-->
    <string name="search_hint">Search for a place...</string>

    <!--Filter-->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <!--Buttons-->
    <string name="btn_filter">Filter</string>
    <string name="btn_save">Save</string>

</resources>
