<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_name"/>

        <TextView
            android:id="@+id/view_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

    <!--Description-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_description">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_description"/>

        <TextView
            android:id="@+id/view_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

    <!--Dimensions-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_dimensions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_dimensions"/>

        <TextView
            android:id="@+id/view_dimensions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

    <!--Geo-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/view_dimensions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_geo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_geo"/>

        <TextView
            android:id="@+id/view_geo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

    <!--Altitude-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/view_geo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_altitude">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_altitude"/>

        <TextView
            android:id="@+id/view_altitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

    <!--File Size-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/view_altitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/view_filesize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorOffBlack"
            android:text="@string/details_filesize"/>

        <TextView
            android:id="@+id/view_filesize_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/details_default" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>