<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imagedetails_appbar"

        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/editimagedetails_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/toolbar_gradient"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

    <!--Name-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/imagedetails_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/edit_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/details_name"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOffBlack"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:textSize="20sp"
            android:hint="@string/details_default" />
    </LinearLayout>

    <!--Description-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:id="@+id/edit_description">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/details_description"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOffBlack"
            android:inputType="textCapSentences"
            android:textSize="20sp"
            android:hint="@string/details_default" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>