<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context="com4510.thebestphotogallery.Activities.FilterSelectActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/filter_appbar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--Start date-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/filter_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:id="@+id/filter_start" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/start_date"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/startdate_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <!--End date-->
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/filter_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorOffWhite"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:id="@+id/filter_end" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/end_date"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/enddate_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/filter_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/filter_action_btn"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filter"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorOffWhite" />

    </RelativeLayout>

  </android.support.constraint.ConstraintLayout>
